# secan

./: .clippy.toml  .dockerignore  .env.example  .gitignore  API.md  CHECKPOINT-PHASE6-VERIFICATION.md  CHECKPOINT-PHASE8-PERFORMANCE.md  CLAUDE.md  CONFIGURATION.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DEDUPLICATION_PROGRESS.md  DEDUPLICATION_SUMMARY.md  DEPLOYMENT_GUIDE.md  DOCKER.md  DOCS_SETUP.md  Dockerfile  IMPLEMENTATION_CHECKLIST.md  LICENSE  METRICS_VALIDATION.md  README-REWRITE.md  README.md  RELEASE.md  RUNNING.md  SHARD_RELOCATION.md  TASKFILE.md  TECHNICAL_DEBT_RESOLUTION.md  TEST_API.md  Taskfile.yml  batch_update_formatters.py  config.example.yaml  docker-compose-es8.yml  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  justfile  openapi.json  package.json  prometheus.yml  (+4 more)
.github/workflows/: README.md  build.yml  ci-cd.yml  ci.yml  docker-multiarch.yml  docker.yml  docker.yml.disabled  docs-deploy.yml  docs-tests.yml  docs.yml  release.yml
.kiro/specs/ai-assistant-integration/: design.md  requirements.md  tasks.md
.kiro/specs/app-authentication/: tasks.md
.kiro/specs/cerebro-rewrite/: design.md  tasks.md
.kiro/specs/cluster-topology-grouping/: tasks.md
.kiro/specs/elasticsearch-exporter-documentation/: requirements.md
.kiro/specs/index-details-visualization/: design.md  requirements.md  tasks.md
.kiro/specs/ldap-authentication/: design.md  requirements.md  tasks.md
.kiro/specs/node-details-enhancement/: design.md  spec.md
.kiro/steering/: 00-serena-bootstrap.md  01-task-completion-requirements.md  02-naming-conventions.md  03-rust-typescript-best-practices.md  04-phase-gate-discipline.md  05-context7-research-tools.md  06-cerebro-ui-design-guide.md
.planning/: MILESTONES.md  PROJECT.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/milestones/: v9.0.0-REQUIREMENTS.md  v9.0.0-ROADMAP.md
.serena/: project.yml
.task/checksum/: build-backend  build-frontend
backend/: Cargo.toml  README.md  config.yaml
backend/assets/: index.html
backend/assets/assets/: Accordion-7os673TM.js  Accordion-B-M_kyoB.js  Accordion-B4MuOBsV.js  Accordion-B5N77YKl.js  Accordion-BBswZWiI.js  Accordion-BD1GEN2C.js  Accordion-BHcXN2dn.js  Accordion-BJsh7ERi.js  Accordion-BKbE6xtQ.js  Accordion-BRnLsd5Z.js  Accordion-BYJV3g23.js  Accordion-Bg0rNgJu.js  Accordion-Bit0LUBH.js  Accordion-BqTcYUQR.js  Accordion-BtjwgrxH.js  Accordion-Bvlh7PJM.js  Accordion-BwqMtIyH.js  Accordion-C11vcXGa.js  Accordion-C1his5em.js  Accordion-C6V-M3n2.js  Accordion-C8ZylEKK.js  Accordion-CHzSlYyz.js  Accordion-CR7mu-XJ.js  Accordion-CRBDp_Ng.js  Accordion-CTbzv-sD.js  Accordion-C_-X8y0U.js  Accordion-C_RjnDrU.js  Accordion-Cb3tSLGl.js  Accordion-CbP3ug5o.js  Accordion-ChBk7e-e.js  Accordion-ChLZ0NzO.js  Accordion-Cu4ONKoD.js  Accordion-CyAZzx3q.js  Accordion-Cztn6N7Y.js  Accordion-D0Qv-RpC.js  Accordion-D2x58SH7.js  Accordion-D3qJG9Nz.js  Accordion-DAz4dkEj.js  Accordion-DC0df90J.js  Accordion-DE5VxHs0.js  (+3894 more)
backend/docs/: TLS_DEPLOYMENT.md
backend/examples/: test_config.rs
backend/src/: assets.rs  lib.rs  main.rs  server.rs
backend/src/auth/: config.rs  local.rs  middleware.rs  mod.rs  oidc.rs  open.rs  provider.rs  rate_limiter.rs  session.rs
backend/src/cluster/: client.rs  manager.rs  mod.rs
backend/src/config/: mod.rs
backend/src/middleware/: logging.rs  mod.rs  security.rs  validation.rs
backend/src/routes/: auth.rs  clusters.rs  generator.rs  health.rs  layout.rs  mod.rs  static_assets.rs  topology.rs
backend/src/routes/clusters/: transform.rs
backend/src/routes/topology/: generator.rs  layout.rs
backend/tests/: auth_logging_config_test.rs  config_env_override_test.rs
benches/: auth.rs  cluster.rs  metrics.rs
config/examples/: README.md  ldap-active-directory.yaml  ldap-freeipa.yaml  ldap-minimal.yaml  ldap-openldap.yaml
coverage/: clover.xml
coverage/lcov-report/: index.html
docs/: .gitignore  .markdown-link-check.json  API_VALIDATION.md  CONFIGURATION_QUICK_REFERENCE.md  MANUAL_TESTING_CHECKLIST.md  MIGRATION.md  README.md  astro.config.mjs  configuration.md  docker-deployment.md  docusaurus.config.js  migrate-content.js  migration-guide-routing-refactor.md  package-lock.json  package.json  sidebars.js  telemetry.md  terraform-elasticstack-reference.md  versions.json
docs/api/: topology-tiles.md
docs/docs/: changelog.md  index.mdx
docs/tests/: elasticsearch-exporter-documentation.test.js  elasticsearch-exporter.test.ts
docs/versioned_sidebars/: version-1.1-sidebars.json
frontend/: .eslintrc.cjs  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  router.test.tsx  router.tsx
openapi_extensions/: topology_tiles_schema.json
scripts/: add-docs-version.sh  bootstrap-test-data.sh  bump-version.sh  cleanup-test-data.sh  color-test.js  create-release.sh  update-docs-version.sh
src/: app_metrics.rs  assets.rs  audit.rs  cli.rs  errors.rs  lib.rs  main.rs  server.rs  server.rs.bak2  server.rs.bak3
src/auth/: ldap.rs  local.rs  middleware.rs  mod.rs  oidc.rs  permissions.rs  rate_limiter.rs  rbac.rs  session.rs
src/cache/: mod.rs
src/cluster/: client.rs  error.rs  manager.rs  manager.rs.bak  mod.rs
src/config/: defaults.rs  mod.rs
src/metrics/: mod.rs  service.rs
src/middleware/: logging.rs  mod.rs  permissions.rs  security.rs  validation.rs
src/prometheus/: client.rs  mod.rs
src/routes/: aliases.rs  app_metrics.rs  auth.rs  cluster_client.rs  clusters.rs  component_templates.rs  health.rs  metrics.rs  mod.rs  openapi.rs  static_assets.rs  telemetry.rs  templates.rs  topology.rs
src/telemetry/: axum_middleware.rs  client.rs  config.rs  exporter.rs  middleware.rs  mod.rs
src/tls/: mod.rs
tests/: config_env_override_test.rs  config_load_test.rs  health_integration_test.rs  metrics_integration_test.rs  oidc_jwks_integration.rs  prometheus_metrics_integration_bugfix_test.rs  prometheus_metrics_preservation_test.rs  telemetry_integration.rs  test_ldap_config_loading.rs  topology_concurrency.rs
(+462 files in other folders)
