[package]
name = "secan"
version = "1.2.4"
edition = "2021"
authors = ["Secan Contributors"]
description = "Elasticsearch cluster management tool - Backend"
license = "GPL-3.0"

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "cors", "compression-gzip"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Configuration
config = { version = "0.14", features = ["yaml", "toml"] }
toml = "0.8"

# HTTP client for Elasticsearch communication
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Elasticsearch Rust SDK
elasticsearch = { version = "8.15.0-alpha.1", default-features = false, features = ["rustls-tls"] }

# URL parsing
url = "2"

# HTTP types
http = "1"

# Embedded assets
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"

# Authentication
bcrypt = "0.18"
argon2 = "0.5"
jsonwebtoken = "10"
openidconnect = "3"

# Error handling
thiserror = "2"
anyhow = "1"

# Environment variables
regex = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# TLS
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"

# Async traits
async-trait = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Random number generation for secure tokens
rand = "0.10"

# URL encoding for OIDC
urlencoding = "2"

# Base64 encoding/decoding
base64 = "0.22"

[dev-dependencies]
proptest = "1"
wiremock = "0.6"
tokio-test = "0.4"
tempfile = "3"
serial_test = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
