[package]
name = "secan"
version = "0.1.3"
edition = "2021"
authors = ["Secan Contributors"]
description = "Elasticsearch cluster management tool - Backend"
license = "AGPL-3.0"

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "cors", "compression-gzip", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# OpenAPI documentation
utoipa = "5"

# Application metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# Configuration
config = { version = "0.15", features = ["yaml", "toml"] }
toml = { version = "1.0" }

# HTTP client for Elasticsearch communication
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "form",
  "query",
  "rustls",
] }

# Async utilities
futures = "0.3"

# Order-preserving map (for config-ordered cluster list)
indexmap = { version = "2", features = ["serde"] }

# URL parsing
url = "2"

# HTTP types
http = "1"

# Embedded assets
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"

# Authentication
bcrypt = "0.19"
argon2 = "0.5"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
openidconnect = "4"
ldap3 = { version = "0.12", features = ["tls"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Environment variables
regex = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# OpenTelemetry tracing (all must be compatible versions)
opentelemetry = { version = "0.29", features = ["trace"] }
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.29", features = ["trace", "grpc-tonic", "http-proto", "reqwest-blocking-client"], default-features = false }
tonic = { version = "0.12", features = ["tls"] }
tracing-opentelemetry = "0.30"

# TLS
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"

# Async traits
async-trait = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Random number generation for secure tokens
rand = "0.10"

# Cryptographically secure randomness for session tokens
getrandom = "0.2"

# URL encoding for OIDC
urlencoding = "2"

# Base64 encoding/decoding
base64 = "0.22"

# Convenience utility for lazy static initialization used by session reference store
# once_cell removed — no server-side reference store used for sessions

# Stable hashing for tile version tokens
sha2 = "0.10"
# LRU + TTL async cache for tile caching
moka = { version = "0.12", features = ["future"] }

[dev-dependencies]
proptest = "1"
wiremock = "0.6"
tokio-test = "0.4"
tempfile = "3"
serial_test = "3"
# hyper removed from dev-dependencies; not used by current tests


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[lints.rust]
# Safety-critical: Deny unsafe code unless explicitly allowed
# unsafe_code = "forbid"

[lints.clippy]
# Deny unwrap() usage in production code
# Use #[allow(clippy::unwrap_used)] with SAFETY comment for legitimate cases
unwrap_used = "deny"

# Additional recommended lints for production quality
# These will be enabled in future phases:
# expect_used = "warn"
# panic = "warn"
# missing_docs_in_private_items = "allow"
